--- a/redirect.html
+++ b/redirect.html
@@ -30,7 +30,7 @@
 (function(){
   // Config
   const DEFAULT_TIMEOUT = 3;            // secondes
-  const LOG_ENDPOINT = "https://webhook.site/TON-CODE-ICI"; // ← remplace par ton webhook.site ou endpoint
+  const LOG_ENDPOINT = "https://webhook.site/203a4b84-4dd1-44da-8181-ff8d6637e60b"; // ← remplace par ton webhook.site ou endpoint
   const ALLOW_SCHEMES = ['http:','https:'];
 
   // Helpers
